--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,11 @@ authors = [
     { name = "Izuho Fujiwara", email = "21aj119@ms.dendai.ac.jp" },
     { name = "Makoto Nakatsuhara", email = "21aj097@ms.dendai.ac.jp"}
 ]
-dependencies = []
+dependencies = [
+    "scapy>=2.5.0",
+    "requests>=2.32.3",
+    "python-dotenv>=1.0.1",
+]
 readme = "README.md"
 requires-python = ">= 3.12"
 
